<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:orientation="vertical">
	    
	    <TextView 
	        android:id="@+id/txtScheduleDayOne"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/day_one"
	        android:textSize="15sp" />
	    
	    <TextView 
	        android:id="@+id/txtScheduleDayOneSchedule"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/day_one_schedule"
	        android:textSize="14sp" />
	    
	    <TextView 
	        android:id="@+id/txtScheduleDayTwo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/day_two"
	        android:textSize="15sp" />
	    
	    <TextView 
	        android:id="@+id/txtScheduleDayTwoSchedule"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/day_two_schedule"
	        android:textSize="14sp" />    
	        
	    <TextView 
	        android:id="@+id/txtScheduleDayThree"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/day_three"
	        android:textSize="15sp" />
	    
	    <TextView 
	        android:id="@+id/txtScheduleDayThreeSchedule"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/day_three_schedule"
	        android:textSize="14sp" />
	    
	    <ImageView 
			android:id="@+id/iconPetComp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_petcomp"
			android:contentDescription="@string/desc_list_item_icon"/> 
		
   		<ImageView 
			android:id="@+id/iconUfma"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_ufma"
			android:contentDescription="@string/desc_list_item_icon"/>
	
	</LinearLayout>
</ScrollView>