<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:orientation="vertical">
	    
	    <ImageView 
			android:id="@+id/iconRobocode"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_robocode"
			android:contentDescription="@string/desc_list_item_icon"/>
	    
	    <TextView 
		    android:id="@+id/txtTitleRobocode1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_robocode1"
		    android:textSize="15sp" />
	    
	    <TextView 
		    android:id="@+id/txtRobocode1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:autoLink="all"
		    android:text="@string/txt_robocode1"
		    android:textSize="14sp" />
	    
	    <TextView 
		    android:id="@+id/txtTitleRobocode2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_robocode2"
		    android:textSize="15sp" />
	    
	    <TextView 
		    android:id="@+id/txtRobocode2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_robocode2"
		    android:textSize="14sp" />
	    
	    <TextView 
		    android:id="@+id/txtTitleRobocode3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_robocode3"
		    android:textSize="15sp" />
	    
	    <TextView 
		    android:id="@+id/txtRobocode3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:autoLink="all"
		    android:text="@string/txt_robocode3"
		    android:textSize="14sp" />
	    
	    <ImageView 
			android:id="@+id/iconPetComp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_petcomp"
			android:contentDescription="@string/desc_list_item_icon"/> 
		
   		<ImageView 
			android:id="@+id/iconUfma"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_ufma"
			android:contentDescription="@string/desc_list_item_icon"/>
	
	</LinearLayout>
</ScrollView>