<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:orientation="vertical">
	    
	    <ImageView 
			android:id="@+id/iconMaratona"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_marathon"
			android:contentDescription="@string/desc_list_item_icon"/>
	    
	    <TextView 
		    android:id="@+id/txtMarathon1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_maratona1"
		    android:textSize="14sp" />
	    
	    <TextView 
		    android:id="@+id/txtTitleMarathon1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_maratona1"
		    android:textSize="15sp" />
	    
	    <TextView 
		    android:id="@+id/txtMarathon2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_maratona2"
		    android:textSize="14sp" />
	    
	    <TextView 
		    android:id="@+id/txtTitleMarathon2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_maratona2"
		    android:textSize="15sp" />
	    
	     <TextView 
		    android:id="@+id/txtMarathon3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_maratona3"
		    android:textSize="14sp" />
	    
	    <ImageView 
			android:id="@+id/iconPetComp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_petcomp"
			android:contentDescription="@string/desc_list_item_icon"/> 
		
   		<ImageView 
			android:id="@+id/iconUfma"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_ufma"
			android:contentDescription="@string/desc_list_item_icon"/>
	
	</LinearLayout>
</ScrollView>