<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:paddingTop="5dp"
	    android:paddingBottom="5dp"
	    android:orientation="vertical">
	    
	     <TextView 
		    android:id="@+id/txtTitlePetcomp1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_petcomp1"
		    android:textSize="15sp" />
	    
	    <TextView 
		    android:id="@+id/txtPetcomp1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_petcomp1"
		    android:textSize="14sp" />
	    
	     <TextView 
		    android:id="@+id/txtTitlePetcomp2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_title_petcomp2"
		    android:textSize="15sp" />
	   
	     <TextView 
		    android:id="@+id/txtPetcomp2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/txt_petcomp2"
		    android:textSize="14sp" />
	    
	    <ImageView 
			android:id="@+id/iconPetComp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_petcomp"
			android:contentDescription="@string/desc_list_item_icon"/> 
		
   		<ImageView 
			android:id="@+id/iconUfma"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_ufma"
			android:contentDescription="@string/desc_list_item_icon"/>
	
	</LinearLayout>
</ScrollView>